replaced some template data with my own

--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
 <script src="http://distill.pub/template.v1.js"></script>
 
 <script type="text/front-matter">
-  title: "Article Title"
-  description: "Description of the post"
+  title: "Inductive Programming"
+  description: "The most powerful ML you've never heard of"
   authors:
-  - Chris Olah: http://colah.github.io
-  - Shan Carter: http://shancarter.com
+  - Elena L. Glassman: http://eglassman.github.io
   affiliations:
-  - Google Brain: http://g.co/brain
-  - Google Brain: http://g.co/brain
+  - Postdoctoral Scholar, UC Berkeley EECS & Berkeley Institute of Design: http://bid.berkeley.edu/
 </script>
 
 <dt-article>
-  <h1>Hello World</h1>
-  <h2>A description of the article</h2>
+  <h1>Inductive Programming</h1>
+  <h2>The most powerful machine learning method you've never heard of</h2>
   <dt-byline></dt-byline>
-  <p>This is the first paragraph of the article.</p>
-  <p>We can also cite <dt-cite key="gregor2015draw"></dt-cite> external publications.</p>
+  <!-- <p>This is the first paragraph of the article.</p> -->
+  <!-- <p>We can also cite <dt-cite key="gregor2015draw"></dt-cite> external publications.</p> -->
 </dt-article>
 
 <dt-appendix>
