updated front matter

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <script src="http://distill.pub/template.v1.js"></script>
 
 <script type="text/front-matter">
-  title: "Inductive Programming"
-  description: "The most powerful ML you've never heard of"
+  title: "Inductive Learning"
+  description: "Generalizing from examples in humans and machines"
   authors:
   - Elena L. Glassman: http://eglassman.github.io
   affiliations:
@@ -12,10 +12,11 @@
 </script>
 
 <dt-article>
-  <h1>Inductive Programming</h1>
-  <h2>The most powerful machine learning method you've never heard of</h2>
+  <h1>Inductive Learning</h1>
+  <h2>Generalizing from examples in humans and machines</h2>
   <dt-byline></dt-byline>
-  <!-- <p>This is the first paragraph of the article.</p> -->
+  <p>This is the first paragraph of the article.</p>
+  
   <!-- <p>We can also cite <dt-cite key="gregor2015draw"></dt-cite> external publications.</p> -->
 </dt-article>
 
