actual first sentence

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   <h1>Inductive Learning</h1>
   <h2>Generalizing from examples in humans and machines</h2>
   <dt-byline></dt-byline>
-  <p>This is the first paragraph of the article.</p>
-  
+
+  <p>
+
+  <p>Inductive learning is the process of generalizing from examples.</p>
   <!-- <p>We can also cite <dt-cite key="gregor2015draw"></dt-cite> external publications.</p> -->
 </dt-article>
 
